# rust-chat

./: .gitignore  Cargo.toml  client.html  tmp_rovodev_test.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatArea.tsx  LoginPage.tsx  OAuthCallback.tsx  Sidebar.tsx  UserList.tsx
frontend/src/styles/: LoginPage.css  Rustcord.css
frontend/src/utils/: aes.ts  oauth.ts
src/: auth.rs  client.rs  env_loader.rs  main.rs  server.rs  webserver.rs
