[package]
name = "rust-chatserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.4"
base64 = "0.21"
aes = "0.8"
cbc = "0.1"
rand = "0.8"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"     
path = "src/client.rs"
