[package]
name = "rust-chatserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.4"
base64 = "0.21"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.4", features = ["cors"] }
urlencoding = "2.1"
dotenv = "0.15.0"
sha2 = "0.10"
pbkdf2 = "0.12"
